# edge-mender

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conftest.py  evaluate.ipynb  example.ipynb  pseudocode.py  pyproject.toml  setup.py
.github/workflows/: coverage-badge.yml  pre-commit.yml  release.yml  test.yml  tests.yml
NOT_FOR_REVIEW/: .gitignore  LICENSE  README.md
edge_mender/: __init__.py  data.py  data_factory.py  edge_mender.py  fixer.py  geometry_helper.py  helper.py  mesh_generator.py  non_manifold_edges.pyi  non_manifold_edges.pyx  non_manifold_vertices.pyi  non_manifold_vertices.pyx  tmp.py  to_mesh.py  visualize.py  visualizer.py
edge_mender/tests/: test_data_factory.py  test_edge_mender.py  test_geometry_helper.py
results/: evaluate.ipynb  results.json  results.xlsx
tests/: __init__.py  test_edge_mender.py  test_edge_mender_unit.py  test_geometry_helper.py  test_mesh_generator.py  test_non_manifold_vertices.py
workflows/: coverage-badge.yml  release.yml
