[build-system]
requires = ["setuptools>=74.1.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-mender"
version = "0.1.0"
description = "A Topology Repair Algorithm for Voxel Boundary Meshes"
authors = [{ name = "Matthew Vine", email = "mattvine03@gmail.com" }]
keywords = ["mesh", "manifold", "topology", "voxel", "3d", "geometry"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["numpy>=2.3.4", "trimesh>=4.9.0"]

[project.optional-dependencies]
test = [
    "connected-components-3d>=3.26.0",
    "fill-voids>=2.1.1",
    "pyvista>=0.46.4",
    "nibabel>=5.3.2",
    "scipy>=1.16.3",
    "panda3d>=1.10.15",
    "manifold3d>=3.3.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
    "uv>=0.9.5",
    "cython>=3.1.5",
    "pre-commit>=4.5.0",
]
debug = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "networkx>=3.5",
    "trame>=3.12.0",
    "trame-server>=3.8.1",
    "trame-vtk>=2.10.0",
    "trame-vuetify>=3.1.0",
    "fast-simplification>=0.1.12",
    "itk>=5.4.4",
    "itk-cuberille>=2.7.2",
    "pynrrd>=1.1.3",
]

[tool.setuptools]
packages = ["edge_mender"]
# ext-modules = [{ name = "fastem", sources = ["edge_mender/fast_fixer.pyx"] }]

[tool.ruff]
exclude = ["edge_mender/Dual_Contouring_Voxel"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TD002", "FIX002", "C901", "PLR0912", "PLR0913", "PLR0915"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"pseudocode.py" = ["ALL"]
"tests/*" = ["S101", "SLF001", "PLR0913"]

[tool.coverage.run]
omit = [
    "conftest.py",
    "pseudocode.py",
    "tests/*",
    "edge_mender/Dual_Contouring_Voxel/*",
]
